--- a/index.html
+++ b/index.html
@@ -155,6 +155,20 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="card-deck col-sm-12">
+            <div class="card">
+              <img src="img/work-cycle.jpg" class="card-img-top" alt="frontend">
+              <div class="card-body">
+                <h5 class="card-title text-center">Work Cycle Ecommerce</h5>
+                <p class="card-text text-center">An Ecommerce Bike Store that is fully responsive on Desktop and Mobile View. </p>
+                <div class="buttons text-center pt-3">
+                   <a target="_blank" href="https://workcycles.000webhostapp.com/"><button type="button" class="btn btn-primary">Learn More &rarr;</button></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
