Added some changes

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="card-deck col-sm-12">
+          <div class="card-deck col-md-4 col-sm-12">
             <div class="card">
               <img src="img/work-cycle.jpg" class="card-img-top" alt="frontend">
               <div class="card-body">
